# PKM-rebuild

./: .gitignore  CLAUDE.md  MANUAL_STEPS.md  Makefile  README.md  WAYFINDING.md  mise.toml  pyproject.toml  smoke_test_8a.py
.claude/hooks/: pre-compact.sh  session-start.sh
config/: categories.yaml  enums.yaml  tag_merge_map.json  tag_vocabulary.yaml
docs/: 00b_arbeitsvereinbarung.md  01_strategy.md  02_pipeline_spec.md  03_vault_standard.md  04_qwen_prompts.md  05_glossary.md  06_claude_code_workflow.md  06b_tool_routing.md  07_backup_strategy.md  DOD_CHECK.md  FUTURE_RUN.md  MANUAL.md  PROJECT_STATUS.md  Projektplan_pipeline-v2.md  Projektplan_pipeline-v3.md  REBUILD_inventory.md  RUNBOOK_new_files.md  Zielbeschreibung_PKM-Pipeline_rebuilt.md  cc_anweisung_phase8_complete.md  luecken-uebersicht-oos-nb-conf.md  ziel-implementierungs-matrix.md
docs/_archive/: AUDIT.md  PHASE9_GO.md  PRE_PHASE9_HARDENING.md  Projektplan_pipeline-v2.md  README.md  cc_phase8_resume.md  smoke_test_8a.py
docs/audit/: audit-report_phase-3-abgleich.md  audit-report_phase-4-drift.md  backfill-dryrun-keyphrases_2026-06-26.md  gate_nb-verify_2026-06-26.md
docs/handover/: HANDOVER_2026-06-18_WP3b.md  HANDOVER_2026-06-20_wp4-complete_phase0.md  a2a-hub-backfill-review.md  a2b-nb-backfill-review.md  ideen-backlog.md  low_confidence_tags.md  post-wp4-stand.md  tag_remediation_plan.md  v3-entrypoints.md  v3-stand-nach-wp3.md  v3-synthese-stand.md  v3-wp0-phaseC-altlast.md  wp4-closeout.md  wp4-t2a-nlp.md  wp4-t5a-index-fix.md
pipeline/: CLAUDE.md  __init__.py  __main__.py  _paths.py  backfill_dryrun.py  backfill_nb_fields.py  backfill_write.py  batch_restructure.py  config.py  driver.py  fence_indented.py  format_vault.py  frontmatter_audit.py  ingest.py  ingest_md_download.py  keyphrase.py  logging_setup.py  orchestrator.py  phase_10_reports.py  phase_1_inventory.py  phase_2_normalize.py  phase_3_structure.py  phase_4_segment.py  phase_5_redundancy.py  phase_6_embeddings.py  phase_7_batches.py  phase_8_synthesis.py  phase_9_vault_build.py  pipeline.config.yaml  process_orchestrator.py  promotion.py  quality_score.py  redundancy_scan.py  regenerate_indices.py  restructure.py  review.py  run_flow.py  schemas.py  synthesis_moc.py  taxonomy.py  (+5 more)
prompts/: CLAUDE.md  Verzeichnis_schemas.txt
scripts/: __init__.py  _pkm_common.py  a1b-vault-gate.sh  apply_category_mapping.py  apply_tag_map.py  backup_vault.sh  check_frontmatter.py  clustering_analysis.py  dod_check.py  draft_inventory.py  manage_vocab.py  phase8_runner.py  pkm_triage.py  preflight.sh  publish_assets.py  r2_diagnose.py  rebuild_indices.py  restore.sh  snapshot.sh  tag_inventory.py  unsortiert_diagnose.py  validate_vault.py
tests/: conftest.py  test_add_tag_governed.py  test_backfill_dryrun.py  test_backfill_nb_fields.py  test_backfill_write.py  test_batch_restructure.py  test_categories_ssot.py  test_cli_import.py  test_cli_vault_apply.py  test_clustering_analysis.py  test_config.py  test_doccount_baseline.py  test_driver.py  test_fence_indented.py  test_format_vault.py  test_frontmatter_audit.py  test_ingest.py  test_ingest_md_download.py  test_keyphrase_tuning.py  test_logging_setup.py  test_manage_vocab.py  test_nb_field_layer.py  test_nb_report_suite.py  test_orchestrator.py  test_phase8_runner.py  test_phase_10_reports.py  test_phase_1_inventory.py  test_phase_2_normalize.py  test_phase_3_structure.py  test_phase_4_segment.py  test_phase_5_redundancy.py  test_phase_6_embeddings.py  test_phase_7_batches.py  test_phase_8_gedanken.py  test_phase_8_synthesis.py  test_phase_9_vault_build.py  test_pkm_common.py  test_pkm_common_ssot.py  test_process_orchestrator.py  test_promotion.py  (+20 more)
(+97 files in other folders)
