[project]
name = "pkm-rebuild"
version = "0.1.0"
description = "Pipeline + Workflow zur Bereinigung einer Markdown-Wissenssammlung in einen strukturierten Obsidian-Vault"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    {name = "muente", email = "muente@example.com"},
]
keywords = ["pkm", "obsidian", "markdown", "pipeline", "llm", "qwen"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Markup :: Markdown",
]

dependencies = [
    # === Pipeline-Core ===
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "click>=8.1",
    "structlog>=24.4",
    "rich>=13.7",
    "httpx>=0.27",
    "pyyaml>=6.0",

    # === Markdown / Text ===
    "mistune>=3.0",

    # === Daten / Embeddings ===
    "sentence-transformers>=3.0",
    "scikit-learn>=1.5",
    "pyarrow>=17.0",        # für Parquet-Output

    # === LLM-Client ===
    "openai>=1.40",         # OpenAI-kompatibler Client für LM Studio

    # === Memory-Monitoring ===
    "psutil>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "ipython>=8.27",        # für interaktives Debugging
]

# Phase 7b (optional, UMAP + HDBSCAN)
viz = [
    "umap-learn>=0.5",
    "hdbscan>=0.8",
    "plotly>=5.24",
]

[project.scripts]
pipeline = "pipeline.__main__:cli"
pkm = "pipeline.__main__:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pipeline"]

# === Ruff (Lint + Format) ====================================================
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["pipeline", "tests"]
exclude = ["scripts/"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "C90",  # mccabe complexity
    "PT",   # flake8-pytest-style
    "RUF",  # ruff-specific
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.ruff.format]
quote-style = "double"

# === Mypy (Type-Checking) ====================================================
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "sentence_transformers.*",
    "sklearn.*",
    "scipy.*",
    "umap.*",
    "hdbscan.*",
    "yaml",
]
ignore_missing_imports = true

# === Pytest ==================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "slow: tests die länger dauern (Embedding-Modell-Load)",
    "qwen: tests die Qwen-Endpoint brauchen (LM Studio läuft)",
]

# === Coverage ================================================================
[tool.coverage.run]
source = ["pipeline"]
omit = [
    "*/tests/*",
    "*/__main__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
